--- a/website/main.css
+++ b/website/main.css
@@ -1,3 +1,9 @@
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic);
+
+* {
+  font-family: 'Ubuntu', sans-serif;
+}
+
 html, body {
     padding:0px;
     margin:0px;
